tests/NormalTests/paczka1/fuzzy1/65262890.err
Error in line 12: S440 S440 40,9
Error in line 4: Q8iZBtd A223 88,8
Error in line 13: yIDaDYXFN A223 79,6
Error in line 24: gZ0J5Rx S914 77,5
Error in line 30: yIDaDYXFN A223 80,6
Error in line 29: U2vx2hyITM3 A184 43,4
Error in line 34: yIDaDYXFN S914 53,1
